--- a/products/templates/products/products.html
+++ b/products/templates/products/products.html
@@ -66,7 +66,7 @@
                         </a>
                         <div class="card-body">
                             <h4 class="card-title">
-                                <a href="#">{{ product.name }}</a>
+                                <a href="#">{{ product.name|title }}</a>
                             </h4>
                             <h5>{{ product.price }} руб. </h5>
                             <p class="card-text">{{ product.describe }}</p>
@@ -107,7 +107,7 @@
 {% block footer %}
     <footer class="py-5 bg-dark">
     <div class="container">
-        <p class="m-0 text-center text-white">Copyright &copy; GeekShop 2020</p>
+        <p class="m-0 text-center text-white">Copyright &copy; GeekShop 2020 {% now "SHORT_DATETIME_FORMAT" %}</p>
     </div>
     <!-- /.container -->
 </footer>
