--- a/admins/templates/admins/admin-users-read.html
+++ b/admins/templates/admins/admin-users-read.html
@@ -2,7 +2,18 @@
 
 {% block content %}
     <main>
-            <div class="container-fluid">
+        {% if messages %}
+            <div class="alert alert-success alert-dismissible fade show" role="alert"
+                style="margin-top: 40px;">
+                {% for message in messages %}
+                    {{ message }}
+                {% endfor %}
+                <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+        {% endif %}
+        <div class="container-fluid">
                 <h1 class="mt-4">Пользователи</h1>
                 <div class="card mb-4">
                     <div class="card-header">
