--- a/users/templates/users/login.html
+++ b/users/templates/users/login.html
@@ -46,7 +46,7 @@
                                         <a href="#">
                                             <i class="fab fa-google fa-2x" style="color: #d9503e;"></i>
                                         </a>
-                                        <a href="#">
+                                        <a href="{% url 'social:begin' 'vk-oauth2' %}">
                                             <i class="fab fa-vk fa-2x" style="color: #4a658b;"></i>
                                         </a>
                                         <a href="#">
