--- a/products/templates/products/products.html
+++ b/products/templates/products/products.html
@@ -6,22 +6,14 @@
 {% endblock %}
 
 {% block content %}
+        <div class="container">
 
-    <div class="container">
-
-    <div class="row">
+        <div class="row">
 
         <div class="col-lg-3">
-
-            <h1 class="my-4">GeekShop</h1>
-            <div class="list-group">
-                {% for category in categories %}
-                    <a href="{% url 'products:category' category.id %}" class="list-group-item">{{ category.name }}</a>
-                {% endfor %}
-            </div>
-
+            {% include 'products/includes/inc_menu.html' %}
         </div>
-        <!-- /.col-lg-3 -->
+
 
         <div class="col-lg-9">
 
