--- a/admins/templates/admins/admin-users-read.html
+++ b/admins/templates/admins/admin-users-read.html
@@ -47,7 +47,7 @@
                                 {% for user in object_list %}
                                     <tr>
                                         <td>
-                                            <a href="{% url 'admin_staff:admin_users_update' user.id %}" style="color: dodgerblue">
+                                            <a href="{% url 'admin_stuff:admin_users_update' user.id %}" style="color: dodgerblue">
                                                 {{ user.username }}
                                             </a>
                                         </td>
@@ -75,7 +75,7 @@
                         </div>
                     </div>
                     <div class="card-footer">
-                        <a href="{% url 'admin_staff:admin_users_create' %}">
+                        <a href="{% url 'admin_stuff:admin_users_create' %}">
                             <button class="btn btn-success">Создать пользователя</button>
                         </a>
                     </div>
