--- a/admins/templates/admins/admin-users-update-delete.html
+++ b/admins/templates/admins/admin-users-update-delete.html
@@ -5,7 +5,7 @@
             <div class="container-fluid">
                 <h1 class="mt-4">Редактирование пользователя | {{ object.username }}</h1>
                 <div class="card-body">
-                    <form action="{% url 'admin_staff:admin_users_update' object.id %}" method="post"
+                    <form action="{% url 'admin_stuff:admin_users_update' object.id %}" method="post"
                           enctype="multipart/form-data">
                         {% csrf_token %}
                         <div class="form-row">
@@ -50,7 +50,7 @@
                     </form>
                     <div class="row">
                         <div class="col-lg-12" style="margin-top: 33px;">
-                            <form action="{% url 'admin_staff:admin_users_delete' object.id %}" method="post">
+                            <form action="{% url 'admin_stuff:admin_users_delete' object.id %}" method="post">
                                 {% csrf_token %}
                                 <input type="submit" class="btn btn-danger btn-block" value="Удалить">
                             </form>
