--- a/admins/templates/admins/base.html
+++ b/admins/templates/admins/base.html
@@ -59,7 +59,7 @@
                         </div>
                         Категории
                     </a>
-                    <a class="nav-link" href="{% url 'admin_stuff:products' item.id %}">
+                    <a class="nav-link" href="{}">
                         <div class="sb-nav-link-icon">
                             <i class="fas fa-tshirt"></i>
                         </div>
