--- a/admins/templates/admins/category_update.html
+++ b/admins/templates/admins/category_update.html
@@ -4,26 +4,24 @@
 {% block content %}
     <main>
         <div class="container-fluid">
-            <h1 class="mt-4">{{ title|title }}</h1>
+            <h1 class="mt-4">Категории</h1>
             <div class="card mb-4">
                 <div class="card-header">
                     <i class="fas fa-table mr-1"></i>
-                    {{ category.name|title }}
+                    {{ title|title }}
                 </div>
                 <div class="card-body">
                     <div class="table-responsive">
-                        Уверены, что хотите удалить {{ category_to_delete.name }}?
-                        <form action="{% url 'admin_stuff:category_delete' category_to_delete.pk %}"
-                              method="post">
-                          {% csrf_token %}
-                          <input class="btn btn-danger" type="submit" value="удалить">
+                        <form class="form-horizontal" method="post" enctype="multipart/form-data">
+                            {% csrf_token %}
+                            {{ form.as_p }}
+                            <input class="form-control" type="submit" value="сохранить">
                         </form>
-
                     </div>
                 </div>
                 <div class="card-footer">
                     <a href="{% url 'admin_stuff:categories' %}">
-                        <button class="btn btn-success">Отмена</button>
+                        <button class="btn btn-success">К списку категорий</button>
                     </a>
                 </div>
             </div>
